@@ -7,6 +7,9 @@ class TreeDialog < OSX::NSObject
   attr_accessor :delegate, :prefix
   ib_outlet :window, :tree, :upButton, :downButton
   
+  TREE_ITEM_TYPE = 'item'
+  TREE_ITEM_TYPES = [TREE_ITEM_TYPE]
+  
   def initialize
     @prefix = 'treeDialog'
   end
@@ -17,6 +20,7 @@ class TreeDialog < OSX::NSObject
     NSBundle.loadNibNamed_owner('TreeDialog', self)
     reload_tree
     @c.each {|i| @tree.expandItem(i) }
+  	@tree.registerForDraggedTypes(TREE_ITEM_TYPES);
     update
     show
   end
@@ -30,6 +34,7 @@ class TreeDialog < OSX::NSObject
   end
   
   def windowWillClose(sender)
+    @tree.unregisterDraggedTypes
     fire_event('onClose')
   end
   
@@ -44,9 +49,8 @@ class TreeDialog < OSX::NSObject
   end
   
   def onUp(sender)
-    sel = @tree.selectedRows
-    return if sel.empty?
-    sel = @tree.itemAtRow(sel[0])
+    sel = current_sel
+    return unless sel
     if sel.kind_of?(IRCUnitConfig)
       i = @c.index(sel)
       if i && i > 0
@@ -62,13 +66,13 @@ class TreeDialog < OSX::NSObject
       end
     end
     reload_tree
-    @tree.select(@tree.rowForItem(sel))
+    set_sel(sel)
+    update
   end
   
   def onDown(sender)
-    sel = @tree.selectedRows
-    return if sel.empty?
-    sel = @tree.itemAtRow(sel[0])
+    sel = current_sel
+    return unless sel
     if sel.kind_of?(IRCUnitConfig)
       i = @c.index(sel)
       if i && i < @c.length - 1
@@ -84,7 +88,8 @@ class TreeDialog < OSX::NSObject
       end
     end
     reload_tree
-    @tree.select(@tree.rowForItem(sel))
+    set_sel(sel)
+    update
   end
   
   def outlineView_numberOfChildrenOfItem(sender, item)
@@ -117,7 +122,7 @@ class TreeDialog < OSX::NSObject
     item.name
   end
   
-  objc_method :outlineView_shouldEditTableColumn_item, 'c@:@@@'
+  #objc_method :outlineView_shouldEditTableColumn_item, 'c@:@@@'
   def outlineView_shouldEditTableColumn_item(sender, column, item)
     false
   end
@@ -126,14 +131,109 @@ class TreeDialog < OSX::NSObject
     update
   end
   
-  def update
+  #objc_method :outlineView_writeItems_toPasteboard, 'c@:@@@'
+  def outlineView_writeItems_toPasteboard(sender, items, pboard)
+    i = items.to_a[0]
+    if i.kind_of?(IRCUnitConfig)
+      unit_index = @c.index(i)
+      s = "#{unit_index}"
+    else
+      unit_index = @c.index(i.owner)
+      channel_index = i.owner.channels.index(i)
+      s = "#{unit_index}-#{channel_index}"
+    end
+    pboard.declareTypes_owner(TREE_ITEM_TYPES, self)
+    pboard.setPropertyList_forType(s, TREE_ITEM_TYPE)
+    true
+  end
+  
+  def find_item_from_pboard(s)
+    if /^(\d+)-(\d+)$/ =~ s
+      u = $1.to_i
+      c = $2.to_i
+      @c[u].channels[c]
+    elsif /^(\d)+$/ =~ s
+      @c[s.to_i]
+    else
+      nil
+    end
+  end
+  
+  def outlineView_validateDrop_proposedItem_proposedChildIndex(sender, info, item, index)
+    return NSDragOperationNone if index < 0
+  	pboard = info.draggingPasteboard
+  	return NSDragOperationNone unless pboard.availableTypeFromArray(TREE_ITEM_TYPES)
+    target = pboard.propertyListForType(TREE_ITEM_TYPE)
+    return NSDragOperationNone unless target
+    i = find_item_from_pboard(target.to_s)
+    return NSDragOperationNone unless i
+    if i.kind_of?(IRCUnitConfig)
+      return NSDragOperationNone if item
+    else
+      return NSDragOperationNone unless item
+      return NSDragOperationNone if item != i.owner
+    end
+    NSDragOperationGeneric
+  end
+  
+  def current_sel
     sel = @tree.selectedRows
-    if sel.empty?
+    sel.empty? ? nil : @tree.itemAtRow(sel[0])
+  end
+  
+  def set_sel(item)
+    return unless item
+    index = @tree.rowForItem(item)
+    @tree.select(index) if index >= 0
+  end
+  
+  objc_method :outlineView_acceptDrop_item_childIndex, 'c@:@@@i'
+  def outlineView_acceptDrop_item_childIndex(sender, info, item, index)
+    return false if index < 0
+  	pboard = info.draggingPasteboard
+  	return false unless pboard.availableTypeFromArray(TREE_ITEM_TYPES)
+    target = pboard.propertyListForType(TREE_ITEM_TYPE)
+    return false unless target
+    i = find_item_from_pboard(target.to_s)
+    return false unless i
+    if i.kind_of?(IRCUnitConfig)
+      return false if item
+      sel = current_sel
+      
+      ary = @c
+      high = ary[0...index] || []
+      low = ary[index...ary.length] || []
+      high.delete(i)
+      low.delete(i)
+      @c = high + [i] + low
+      reload_tree
+      
+      set_sel(sel)
+    else
+      return false unless item
+      return false if item != i.owner
+      sel = current_sel
+      
+      ary = item.channels
+      high = ary[0...index] || []
+      low = ary[index...ary.length] || []
+      high.delete(i)
+      low.delete(i)
+      item.channels = high + [i] + low
+      reload_tree
+      
+      set_sel(sel)
+    end
+    update
+    true
+  end
+  
+  def update
+    sel = current_sel
+    unless sel
       @upButton.setEnabled(false)
       @downButton.setEnabled(false)
-      return
     else
-      sel = @tree.itemAtRow(sel[0])
       if sel.kind_of?(IRCUnitConfig)
         i = @c.index(sel)
         if i
